--- a/deployments/docker/Dockerfile
+++ b/deployments/docker/Dockerfile
@@ -1,22 +1,18 @@
-# our base image
-FROM alpine:latest
+## Build the image based python3 
+FROM python:3
 
-# Install python and pip
-RUN apk add --update py-pip
+## Copy all the packages
+COPY . /app
 
-# upgrade pip
-RUN pip install --upgrade pip
+## Change the default folder 
+WORKDIR /app
 
-# install Python modules needed by the Python app
-COPY requirements.txt /usr/src/app/
-RUN pip install --no-cache-dir -r /usr/src/app/requirements.txt
+## Install all packages
+RUN pip install -r /app/requirements.txt
 
-# copy files required for the app to run
-COPY app.py /usr/src/app/
-COPY templates/index.html /usr/src/app/templates/
 
-# tell the port number the container should expose
-EXPOSE 5000
+## Default port is 5000
+EXPOSE 5000 
 
-# run the application
-CMD ["python", "/usr/src/app/app.py"]
+## When contianer is stared python app.py 
+CMD ["/bin/sh", "-c", "python /app/app.py"]
